--- a/static/.htaccess
+++ b/static/.htaccess
@@ -2,3 +2,4 @@ RewriteEngine On
 RewriteBase /
 RewriteCond %{HTTP:X-HTTPS} !1
 RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
+ErrorDocument 404 https://pomagaickin.ru/404/
